005Boss cream可以亮白瓶

--- a/ballplayer/db/ballplayer.lpc.html
+++ b/ballplayer/db/ballplayer.lpc.html
@@ -16,87 +16,7 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >lcd_inst|pic_ram_inst</TD>
-<TD >18</TD>
-<TD >230</TD>
-<TD >0</TD>
-<TD >230</TD>
-<TD >240</TD>
-<TD >230</TD>
-<TD >230</TD>
-<TD >230</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >lcd_inst|lcd_draw_line_inst</TD>
-<TD >13</TD>
-<TD >0</TD>
-<TD >9</TD>
-<TD >0</TD>
-<TD >11</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >lcd_inst|lcd_show_pic_inst</TD>
-<TD >244</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >20</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >lcd_inst|lcd_init_inst</TD>
-<TD >3</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >12</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >lcd_inst|control_inst</TD>
-<TD >35</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >13</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >lcd_inst|lcd_write_inst</TD>
+<TD >lcd_test_inst|lcd_write_inst</TD>
 <TD >12</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -112,12 +32,12 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >lcd_inst</TD>
-<TD >20</TD>
+<TD >lcd_test_inst</TD>
+<TD >2</TD>
 <TD >1</TD>
 <TD >0</TD>
 <TD >1</TD>
-<TD >6</TD>
+<TD >8</TD>
 <TD >1</TD>
 <TD >1</TD>
 <TD >1</TD>
